# OCR_pro

./: .gitignore  README.md  call_ocr_api.py  pyproject.toml  setup-uv-env.sh  start-backend.sh  start-frontend.sh  start-ocr.bat  start-ocr.ps1  start-ocr.sh
data/: ocr_result_template.txt
ocr_backend/: __init__.py  app.py  cache_loader.py  config.py  config.yaml  download_models.py  ocr_engine.py  requirements.txt  storage.py
ocr_backend/tests/: test_app.py  test_call_ocr_api_script.py  test_config.py  test_ocr_engine.py  test_setup_uv_env_script.py  test_storage.py  test_test_ocr_api_script_shell.py
ocr_frontend/: app.js  index.html  server.py  style.css
script/: setup-uv-env.sh  start-backend.sh  start-frontend.sh  start-ocr.bat  start-ocr.ps1  start-ocr.sh
